[package]
name = "rust-and-dungeons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.1"
winit = "0.29.10"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
bytemuck = { version = "1.12", features = ["derive"] }
